--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "build:vercel": "pnpm --filter=@self/site... build",
     "package": "svelte-kit package",
-    "preview": "PUBLIC_API_URL_LOCAL=http://localhost:3002 PUBLIC_API_URL=http://localhost:3002 PUBLIC_SITE_URL=http://localhost:3000 ORIGIN=http://localhost:3000 PORT=3000 node build/index.js",
+    "preview": "PORT=3000 node build/index.js",
     "check": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore tests",
     "check:watch": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore tests --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -17,8 +17,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "test": "playwright test",
     "report": "playwright show-report",
-    "debug": "vite --port 3000 --debug",
-    "preview:tunnel": "PUBLIC_API_URL_LOCAL=http://localhost:3002 PUBLIC_API_URL=https://api.aqar.live PUBLIC_SITE_URL=https://site.aqar.live ORIGIN=https://site.aqar.live PORT=3000 node build/index.js"
+    "debug": "vite --port 3000 --debug"
   },
   "devDependencies": {
     "@brainandbones/skeleton": "0.32.19",
