--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -24,7 +24,7 @@
     "@felte/reporter-svelte": "1.1.3",
     "@felte/reporter-tippy": "1.1.3",
     "@felte/validator-zod": "1.0.11",
-    "@iconify/json": "2.1.102",
+    "@iconify/json": "2.1.103",
     "@rgossiaux/svelte-headlessui": "1.0.2",
     "@self/sdk": "workspace:0.0.1",
     "@self/utils": "workspace:1.0.0",
@@ -43,8 +43,8 @@
     "@types/jsonwebtoken": "8.5.9",
     "@types/lodash-es": "4.17.6",
     "@types/papaparse": "5.3.5",
-    "@typescript-eslint/eslint-plugin": "5.36.1",
-    "@typescript-eslint/parser": "5.36.1",
+    "@typescript-eslint/eslint-plugin": "5.36.2",
+    "@typescript-eslint/parser": "5.36.2",
     "@vitejs/plugin-basic-ssl": "0.1.2",
     "autoprefixer": "10.4.8",
     "chart.js": "3.8.2",
@@ -83,7 +83,7 @@
     "tslib": "2.4.0",
     "typescript": "4.8.2",
     "unplugin-icons": "0.14.9",
-    "vite": "3.1.0-beta.1",
+    "vite": "3.1.0",
     "zod": "3.18.0"
   },
   "type": "module"
