--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -2,7 +2,11 @@
 
 FROM node:16.9 as site
 
+ARG PUBLIC_AQARATECH_ENV
 ARG PUBLIC_SITE_URL
+ARG PUBLIC_API_URL
+ARG PUBLIC_API_URL_LOCAL
+ARG AUTH0_CLIENT_SECRET
 
 # use multistage: https://www.howtogeek.com/devops/how-to-deploy-a-caddy-web-server-with-docker/
 # Install OpenJDK-11
@@ -30,7 +34,11 @@ RUN pnpm --filter=@self/site deploy pruned
 
 FROM node:16.9-alpine as production
 
+ARG PUBLIC_AQARATECH_ENV
 ARG PUBLIC_SITE_URL
+ARG PUBLIC_API_URL
+ARG PUBLIC_API_URL_LOCAL
+ARG AUTH0_CLIENT_SECRET
 RUN echo "ENV sanity check: PUBLIC_SITE_URL ${PUBLIC_SITE_URL} INBRACKETS=${PUBLIC_SITE_URL} NOBRACKETS=$PUBLIC_SITE_URL"
 
 WORKDIR /app
@@ -41,5 +49,8 @@ COPY --from=site /app/pruned .
 # NO-OP, for convenience only
 EXPOSE 3000
 
-# https://github.com/sveltejs/kit/blob/master/packages/adapter-node/README.md#environment-variables
-CMD ["sh", "-c", "ORIGIN=$PUBLIC_SITE_URL node build/index.js"]
+
+
+# ORIGIN, PORT are for adapter-node: https://github.com/sveltejs/kit/blob/master/packages/adapter-node/README.md#environment-variables
+# Rest of the env vars are to be consumed by sveltekit's $env/static
+CMD ["sh", "-c", "ORIGIN=$PUBLIC_SITE_URL PORT=3000 PUBLIC_AQARATECH_ENV=$PUBLIC_AQARATECH_ENV PUBLIC_SITE_URL=$PUBLIC_SITE_URL PUBLIC_API_URL=$PUBLIC_API_URL PUBLIC_API_URL_LOCAL=$PUBLIC_API_URL_LOCAL AUTH0_CLIENT_SECRET=$AUTH0_CLIENT_SECRET node build/index.js"]
