--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -12,10 +12,12 @@ RUN apt-get update && \
 RUN curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm
 WORKDIR /app
 COPY pnpm-lock.yaml ./
-RUN pnpm fetch 
+
+# Only fetch once bug is fixed. Also add --offline to install command. https://github.com/pnpm/pnpm/issues/5268
+# RUN pnpm fetch 
 
 ADD . ./
-RUN pnpm --filter=. --filter=@self/site... install --prod=false --offline
+RUN pnpm --filter=. --filter=@self/site... install --prod=false
 
 # https://github.com/mhart/alpine-node#example-dockerfile-for-your-own-nodejs-project
 
