--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -2,6 +2,8 @@
 
 FROM node:16.9 as site
 
+ARG PUBLIC_SITE_URL
+
 # use multistage: https://www.howtogeek.com/devops/how-to-deploy-a-caddy-web-server-with-docker/
 # Install OpenJDK-11
 # https://stackoverflow.com/questions/31196567/installing-java-in-docker-image
@@ -19,25 +21,12 @@ COPY pnpm-lock.yaml ./
 ADD . ./
 RUN pnpm --filter=. --filter=@self/site... install --prod=false
 
-# https://github.com/mhart/alpine-node#example-dockerfile-for-your-own-nodejs-project
-
-# Should be supplied from the command line: `--build-arg GREET=World`
-# Safe for secrets as long as not re-declared in final image: https://vsupalov.com/build-docker-image-clone-private-repo-ssh-key/#multi-stage-builds
-ARG PUBLIC_AQARATECH_ENV
-ARG PUBLIC_SITE_URL
-ARG PUBLIC_API_URL
-ARG PUBLIC_API_URL_LOCAL
-ARG AUTH0_CLIENT_SECRET
-
-RUN PUBLIC_AQARATECH_ENV=$PUBLIC_AQARATECH_ENV PUBLIC_SITE_URL=$PUBLIC_SITE_URL PUBLIC_API_URL=$PUBLIC_API_URL PUBLIC_API_URL_LOCAL=$PUBLIC_API_URL_LOCAL AUTH0_CLIENT_SECRET=$AUTH0_CLIENT_SECRET pnpm --filter=@self/site... run build
+RUN pnpm --filter=@self/site... run build
 
 RUN pnpm --filter=@self/site deploy pruned
 
 
 FROM node:16.9-alpine as production
-
-ARG PUBLIC_SITE_URL
-RUN echo "ENV sanity check: PUBLIC_SITE_URL ${PUBLIC_SITE_URL} INBRACKETS=${PUBLIC_SITE_URL} NOBRACKETS=$PUBLIC_SITE_URL"
 
 WORKDIR /app
 ENV NODE_ENV=production
@@ -47,8 +36,8 @@ COPY --from=site /app/pruned .
 # NO-OP, for convenience only
 EXPOSE 3000
 
-
+ARG PUBLIC_SITE_URL
+RUN echo "ENV sanity check: PUBLIC_SITE_URL ${PUBLIC_SITE_URL} INBRACKETS=${PUBLIC_SITE_URL} NOBRACKETS=$PUBLIC_SITE_URL"
 
 # ORIGIN, PORT are for adapter-node: https://github.com/sveltejs/kit/blob/master/packages/adapter-node/README.md#environment-variables
-# Rest of the env vars are to be consumed by sveltekit's $env/static
 CMD ["sh", "-c", "ORIGIN=$PUBLIC_SITE_URL PORT=3000 node build/index.js"]
