--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -72,6 +72,7 @@
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "0.1.13",
     "remeda": "1.1.0",
+    "source-map-support": "0.5.21",
     "svelte": "3.49.0",
     "svelte-check": "2.9.0",
     "svelte-dnd-action": "0.9.19",
