--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -28,6 +28,8 @@
     "@rgossiaux/svelte-headlessui": "1.0.2",
     "@self/sdk": "workspace:0.0.1",
     "@self/utils": "workspace:1.0.0",
+    "@sentry/svelte": "7.12.1",
+    "@sentry/tracing": "7.12.1",
     "@steeze-ui/heroicons": "1.1.1",
     "@steeze-ui/svelte-icon": "1.3.1",
     "@sveltejs/adapter-node": "1.0.0-next.88",
