--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -6,8 +6,7 @@
   ],
   "scripts": {
     "dev": "vite dev --port 3000",
-    "build": "vite build",
-    "build:vercel": "pnpm --filter=@self/site... build",
+    "build": "rm -rf ./build && vite build",
     "package": "svelte-kit package",
     "preview": "PORT=3000 node build/index.js",
     "check": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore tests",
