--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -17,6 +17,7 @@
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "resolveJsonModule": true,
     "paths": {
       "src": ["./src/"]
     }
