--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -12,6 +12,7 @@
 		"noUncheckedIndexedAccess": true,
 		// "exactOptionalPropertyTypes": true,
 		"esModuleInterop": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"resolveJsonModule": true
 	}
 }
